Add navigation links, resize images

--- a/ans.html
+++ b/ans.html
@@ -4,6 +4,7 @@
             <title> Autonomic Nervous System </title>
         </head>
         <body bgcolor="#D9E3F0">
+            <a href="index.html">PhysiologyMaps Home</a>
         	<TABLE WIDTH="800" HEIGHT="370" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
@@ -31,6 +32,7 @@
         <TABLE WIDTH="800" HEIGHT="150" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a align="right" href="ans.html">Autonomic Nervous System</a></p>
                 <a name="twoneuron"><h2 align=center>The ANS is a Two-Neuron System</h2></a>
                 <p> The autonomic nervous system is a <b>two-neuron system</b> (in contrast to the somatic nervous system, which is a one-neuron system). This means that anytime our brain tells the ANS to do something, that signal always travels through two neurons to get to its site of action. Signal travels through this 2-neuron system via neuronal action potentials.</p>
                 <p><b>Neuron 1</b> originates in the central nervous system (CNS) and always releases the neurotransmitter acetylcholine (ACh) into its synapse (which activates <a href="#nicotinic">nicotinic receptors</a> on Neuron 2). Neuron 1 synapses onto Neuron 2 at an <b>autonomic ganglion</b>, which are basically just dedicated areas in our body where neurons synapse on each other. Thus, Neuron 1 is called the <i>preganglionic neuron</i> (before the ganglia) and Neuron 2 is called the <i>postganglionic neuron</i> (after the ganglia).</p> 
@@ -40,9 +42,12 @@
                 <p> <b>Nicotinic receptors</b> in the ANS are found on the postganglionic neuron (the start of the 2nd neuron in the 2-neuron chain). Nicotinic receptors are <b>activated by acetylcholine</b> traveling from Neuron 1 to Neuron 2. Once activated, they <b>directly open Na+ channels</b> in Neuron 2, which starts Neuron 2's action potential, allowing the neuronal signal to propagate toward the effector organ. Nicotinic receptors are an example of an <a href="neurons.html#c_synapse_ion">ionotropic receptor</a>, since they directly open an ion channel to achieve their effects.</p>
                 <p><b>Note:</b> Nicotinic receptors can also be found on skeletal muscle (where a neuron releases acetylcholine into the neuromuscular junction to initiate voluntary movement). However, this is considered part of the somatic nervous system, not the autonomic nervous system.</p>
 </TD></TR></TABLE><br>
+
+
                 <TABLE WIDTH="800" HEIGHT="370" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a align="right" href="ans.html">Autonomic Nervous System</a></p>
                 <a name="ansorgans"><h2 align=center>ANS Effector Organs</h2></a>
                 <p> There are two main groups of organs that are regulated by the autonomic nervous system: 1.) <b>smooth muscle</b> and 2.) <b>the heart</b>. They are called "effector organs" because they are the organs where we want to create some autonomic effect that will help us either "rest and digest" (<a href="#parasympathetic">parasympathetic</a> effects) or "fight or flight" (<a href="#sympathetic">sympathetic</a> effects). </p>
                 <p><b>Smooth muscle</b> is found in many different organs of our body, including blood vessels (to constrict or dilate), the GI tract (to increase or decrease motility), the eye (to dilate or constrict the pupil), the bladder wall, and GI and bladder sphincters. The parasympathetic and sympathetic divisions of the ANS affect these smooth muscles in different ways to help us achieve our normal bodily functions; these effects are detailed below.</p>
@@ -54,12 +59,16 @@
         <TABLE WIDTH="800" HEIGHT="370" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="100">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a align="right" href="ans.html">Autonomic Nervous System</a></p>
                 <a name="ans_ganglia"><h2 align=center>Autonomic Ganglia</h2></a>
                 <p> ***. </p>
                 </TD></TR></TABLE><br>
+
+
         <TABLE WIDTH="800" HEIGHT="150" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a align="right" href="ans.html">Autonomic Nervous System</a></p>
                 <a name="parasympathetic"><h2 align=center>Parasympathetic Nervous System</h2></a>
                 <p> The <b>parasympathetic division</b> of the ANS initiates <b>"rest and digest"</b> activities, such as increased GI motility, urination, and decreased heart rate. To achieve these effects, the postganglionic neurons of the parasympathetic nervous system release the neurotransmitter <b>acetylcholine</b>, which activates <b>muscarinic receptors</b> on effector organs (in contrast to preganglionic neurons, which also release acetylcholine but activate nicotinic receptors.) </p>
                 <center><img src="images/neuro/parasympathetic_figure.png" width="675" height="275"> </center>
@@ -74,6 +83,7 @@
         <TABLE WIDTH="800" HEIGHT="150" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a align="right" href="ans.html">Autonomic Nervous System</a></p>
                 <a name="sympathetic"><h2 align=center>Sympathetic Nervous System</h2></a>
                 <p> The <b>sympathetic division</b> of the ANS initiates <b>"fight or flight"</b> activities, such as increased heart rate, increased heart contractility, and bronchodilation. To achieve these effects, the postganglionic neurons of the sympathetic nervous system mainly release the neurotransmitter <b>norepinephrine</b> (with one exception), which activates <b>adrenergic receptors</b> on effector organs. The <a name="sympatheticexception">one exception</a> to the "sympathetic-adrenergic" match-up is the sympathetic activation of sweat glands; in this case, the sympathetic neuron releases acetylcholine (instead of norepinephrine), which activates muscarinic receptors (instead of adrenergic receptors). </p>
                 <center><img src="images/neuro/sympathetic_figure.png" width="675" height="275"> </center>
@@ -87,6 +97,7 @@
     <TABLE WIDTH="800" HEIGHT="370" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a align="right" href="ans.html">Autonomic Nervous System</a></p>
                 <a name="ans_summary"><h2 align=center>Autonomic Nervous System: Summary</h2></a>
                 <center><img src="images/neuro/ans_summary.png" width="800" height="525"> </center>
             </TD>
