--- a/ans_reg_heart.html
+++ b/ans_reg_heart.html
@@ -4,6 +4,7 @@
             <title> Autonomic Regulation of the Heart </title>
         </head>
         <body bgcolor="#D9E3F0">
+            <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a align="right" href="cardio.html">Cardiovascular main map</a></p>
         	<TABLE WIDTH="800" HEIGHT="370" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
@@ -34,15 +35,16 @@
                <TABLE WIDTH="800" HEIGHT="150" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a href="cardio.html">Cardiovascular main</a> > <a href="ans_reg_heart.html">Autonomic regulation of the heart</a></p>
                 <a name="chronotropic"><h2 align=center>Chronotropic Effects of the ANS on the Heart</h2></a>
                 <p> The <b>chronotropic effects</b> of the autonomic nervous system are all about its effects on <b>heart rate</b> (the firing rate of <b>SA nodal cells</b>).</p>
-                <center><img src="images/cardio/chronotropic.png" width="470" height="200"> </center>
+                <center><img src="images/cardio/chronotropic.png" width="530" height="230"> </center>
                 <h3 align=center>Positive Chronotropic Effects</h3>
                 <p>The <a href="ans.html#sympathetic">sympathetic nervous system</a> causes <i>increases</i> in heart rate via activation of <a href="ans.html#adrenergic">β1 receptors</a> on SA nodal cells ("positive chronotropic effects"). Activated β1 receptors trigger the <a href="gpcr.html#gs">Gs signaling cascade</a> to achieve their effect.</p>
-                <center><img src="images/cardio/chronotropic_pos.png" width="730" height="150"> </center>
+                <center><img src="images/cardio/chronotropic_pos.png" width="760" height="150"> </center>
                 <h3 align=center>Negative Chronotropic Effects</h3>
                 <p>The <a href="ans.html#parasympathetic">parasympathetic nervous system</a> causes <i>decreases</i> in heart rate via activation of <a href="ans.html#muscarinic">M2 receptors</a> on SA nodal cells ("negative chronotropic effects"). Activated M2 receptors trigger the <a href="gpcr.html#gi">Gi signaling cascade</a> to achieve their effect.</p>
-                <center><img src="images/cardio/chronotropic_neg.png" width="730" height="150"> </center>
+                <center><img src="images/cardio/chronotropic_neg.png" width="760" height="160"> </center>
 <br>
                 
             </TD>
@@ -52,15 +54,16 @@
          <TABLE WIDTH="800" HEIGHT="150" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a href="cardio.html">Cardiovascular main</a> > <a href="ans_reg_heart.html">Autonomic regulation of the heart</a></p>
                 <a name="inotropic"><h2 align=center>Inotropic Effects of the ANS on the Heart</h2></a>
                 <p> The <b>inotropic effects</b> of the autonomic nervous system are all about its effects on the <b>contractility</b> of <b>cardiac myocytes</b>.</p>
-                <center><img src="images/cardio/inotropic.png" width="540" height="230"> </center>
+                <center><img src="images/cardio/inotropic.png" width="600" height="260"> </center>
                 <h3 align=center>Positive Inotropic Effects</h3>
                 <p>The <a href="ans.html#sympathetic">sympathetic nervous system</a> causes <i>increases</i> in contractility via activation of <a href="ans.html#adrenergic">β1 receptors</a> on cardiac myocytes ("positive inotropic effects"). Activated β1 receptors trigger the <a href="gpcr.html#gs">Gs signaling cascade</a> to achieve their effect.</p>
-                <center><img src="images/cardio/inotropic_pos.png" width="710" height="120"> </center>
+                <center><img src="images/cardio/inotropic_pos.png" width="765" height="125"> </center>
                 <h3 align=center>Negative Inotropic Effects</h3>
                 <p>The <a href="ans.html#parasympathetic">parasympathetic nervous system</a> causes <i>decreases</i> in contractility via activation of <a href="ans.html#muscarinic">M2 receptors</a> on cardiac myocytes ("negative inotropic effects"). Activated M2 receptors trigger the <a href="gpcr.html#gi">Gi signaling cascade</a> to achieve their effect.</p>
-                <center><img src="images/cardio/inotropic_neg.png" width="710" height="120"> </center>
+                <center><img src="images/cardio/inotropic_neg.png" width="760" height="125"> </center>
             
             </TD>
         </TR>
@@ -69,17 +72,18 @@
         <TABLE WIDTH="800" HEIGHT="150" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a href="cardio.html">Cardiovascular main</a> > <a href="ans_reg_heart.html">Autonomic regulation of the heart</a></p>
                 <a name="dromotropic"><h2 align=center>Dromotropic Effects of the ANS on the Heart</h2></a>
                 <p> The <b>dromotropic effects</b> of the autonomic nervous system are all about its effects on the <b>conduction velocity</b>, or rate of depolarization, of <b>AV nodal cells</b>.</p> 
-                <center><img src="images/cardio/dromotropic.png" width="470" height="200"> </center>
+                <center><img src="images/cardio/dromotropic.png" width="520" height="230"> </center>
 
                 <h3 align=center>Positive Dromotropic Effects</h3>
                 <p>The <a href="ans.html#sympathetic">sympathetic nervous system</a> causes increases in conduction velocity (steeper upstroke) via activation of <a href="ans.html#adrenergic">β1 receptors</a> on AV nodal cells ("positive dromotropic effects"). Activated β1 receptors trigger the <a href="gpcr.html#gs">Gs signaling cascade</a> to achieve their effect.</p>
-                <center><img src="images/cardio/dromotropic_pos.png" width="700" height="135"> </center>
+                <center><img src="images/cardio/dromotropic_pos.png" width="765" height="150"> </center>
 
                 <h3 align=center>Negative Dromotropic Effects</h3>
                 <p>The <a href="ans.html#parasympathetic">parasympathetic nervous system</a> causes <i>decreases</i> in conduction velocity (less steep upstroke) via activation of <a href="ans.html#muscarinic">M2 receptors</a> on AV nodal cells ("negative dromotropic effects"). Activated M2 receptors trigger the <a href="gpcr.html#gi">Gi signaling cascade</a> to achieve their effect.</p>
-                <center><img src="images/cardio/dromotropic_neg.png" width="700" height="135"> </center>
+                <center><img src="images/cardio/dromotropic_neg.png" width="760" height="150"> </center>
             </TD>
         </TR>
     </TABLE></BR>
@@ -87,8 +91,9 @@
         <TABLE WIDTH="800" HEIGHT="500" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="500">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a href="cardio.html">Cardiovascular main</a> > <a href="ans_reg_heart.html">Autonomic regulation of the heart</a></p>
                 <a name="ans_heart_summary"><h2 align=center>Autonomic Regulation of the Heart: Summary</h2></a>
-                <center><img src="images/cardio/autonomic_reg_table.png" width="665" height="525"> </center>
+                <center><img src="images/cardio/autonomic_reg_table.png" width="695" height="530"> </center>
             </TD>
         </TR>
     </TABLE></BR>
