--- a/cardiac_myocytes.html
+++ b/cardiac_myocytes.html
@@ -4,6 +4,7 @@
             <title> Cardiac Myocytes </title>
         </head>
         <body bgcolor="#D9E3F0">
+            <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a align="right" href="cardio.html">Cardiovascular main map</a></p>
         	<TABLE WIDTH="800" HEIGHT="370" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="650" HEIGHT="309">
@@ -40,6 +41,7 @@
 <TABLE WIDTH="800" HEIGHT="370" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a href="cardio.html">Cardiovascular main</a> > <a href="cardiac_myocytes.html">Cardiac myocytes</a></p>
                 <a name="electrical_signal"><h2 align=center>Electrical Excitation of the Heart</h2></a>
                 <p><b>Electrical signal</b> flows through the heart to <b>trigger contraction of the heart muscle cells</b> (cardiac myocytes). The flow of electrical signal is started at the top of the heart (by the nodal cells of the SA node, in the right atrium) and is passed along between neighboring cardiac myocytes going down to the bottom of the heart. It is often referred to as a “wave of depolarization”, because each heart cell has its own action potential and will depolarize when a neighboring cell depolarizes. As  heart cells pass on electrical signal on to their neighboring cells, it causes this massive spread of depolarization down the heart (in a “wave”). <b>The whole purpose of this wave of electrical excitation is to trigger muscle contraction by the cardiac myocytes</b>, which causes the heart to beat and pump out blood.</p>
                 <h3 align=center>General flow of electrical signal through the heart</h3>
@@ -50,6 +52,7 @@
         <TABLE WIDTH="800" HEIGHT="150" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="250">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a href="cardio.html">Cardiovascular main</a> > <a href="cardiac_myocytes.html">Cardiac myocytes</a></p>
                 <a name="nodal_cells"><h2 align=center>Nodal Cells</h2></a>
                 <p> <b>Nodal cells</b> are specialized cardiac myocytes that <b>initiate and conduct electrical signal in the heart at the beginning of each heartbeat</b>. Nodal cells have the ability generate spontaneous action potentials (<a href="#automaticity">automaticity</a>); therefore, nodal cells can initiate their own depolarizations and set the pace of the heart. Nodal cells do <i>not</i> contribute to generating force during heart muscle contraction, like <a href="#av_myocytes">atrial and ventricular myocytes</a> do.</p>
 
@@ -63,6 +66,7 @@
                 <TABLE WIDTH="800" HEIGHT="150" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a href="cardio.html">Cardiovascular main</a> > <a href="cardiac_myocytes.html">Cardiac myocytes</a></p>
                 <a name="sa_node"><h2 align=center>Sinoatrial (SA) Node</h2></a>
                 <p> The <b>sinoatrial (SA) node</b> is a small cluster of conducting cells located in the top of the right atrium. The SA node's main function is to <b>initiate the electrical signal for each heartbeat</b> that travels through our atrial myocytes, to our AV node, and through our ventricular myocytes. The SA node is therefore considered the main "pacemaker" of the heart, because the SA node's firing rate sets our heart rate. The SA node can set the heart rate because of its inherent <a href="#automaticity"><b>automaticity</b></a>, or ability to generate its own action potentials. The SA node normally initiates every wave of depolarization through the heart, because of all the cardiac myocytes that can initiate their own depolarization, the SA node has the fastest firing rate (~60-90 times per minute, a normal resting <a href="cardiac_output.html#heart_rate">heart rate</a>).</p>
 
@@ -81,6 +85,7 @@
                 <TABLE WIDTH="800" HEIGHT="150" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a href="cardio.html">Cardiovascular main map</a> > <a href="cardiac_myocytes.html">Cardiac myocytes</a></p>
                 <a name="av_node"><h2 align=center>Atrioventricular (AV) Node</h2></a>
                 <p> The <b>atrioventricular (AV) node</b> is a small cluster of conducting cells located in the bottom of the right atrium near the interventricular septum. The AV node’s main function is to <b>conduct electrical signal from the atria to the ventricles</b>. After the atria depolarize, the electrical signal reaches the AV node, where there is a slight delay (due to the slow conduction velocity of the AV node). This delay allows time for the newly depolarized atria to contract and empty their blood into the ventricles (this is <b>diastole</b>, aka filling of the ventricles) before the AV node sends off the signal to depolarize the His-Purkinje and the ventricles.</p>
                 
@@ -102,6 +107,7 @@
          <TABLE WIDTH="800" HEIGHT="150" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a href="cardio.html">Cardiovascular main</a> > <a href="cardiac_myocytes.html">Cardiac myocytes</a></p>
                 <a name="av_myocytes"><h2 align=center>Atrial and Ventricular Myocytes</h2></a>
                 <p> Cardiac myocytes in the atria and ventricles make up the main mass of the heart muscle and are <b>contractile cells</b>. They receive the electrial signal started in the SA node (and conducted through the AV node), which triggers them to <b>generate a muscle contraction</b>. These atrial and ventricular myocytes, therefore, have two main functions: 1.) <a href="#myocytes_propagate_ap"><b>pass on their electrical signal to neighboring myocytes</b></a>, and 2.) <a href="#myocytes_contract"><b>perform the actual muscle contractions</b></a> that allow the heart to pump blood.</p>
 
@@ -119,6 +125,7 @@
          <TABLE WIDTH="800" HEIGHT="150" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a href="cardio.html">Cardiovascular main map</a> > <a href="cardiac_myocytes.html">Cardiac myocytes</a></p>
                 <a name="myocytes_propagate_ap"><h2 align=center>Atrial and Ventricular Myocytes Propagate Their Action Potentials Throughout the Myocardium</h2></a>
                 <p> Even though atrial and ventricular myocytes don't typically initiate their own depolarizations like nodal cells, they still need to pass on the electrical signal to neighboring myocytes. Cardiac myocytes pass their electrical signal to each other through <b>gap junctions</b> that directly connect neighboring myocytes. Gap junctions between cardiac myocytes are examples of <a href="neurons.html#e_synapse">electrical synapses</a>, because ions from one cell's action potential are directly transported to the next cell to start a new action potential. Gap junctions allow for very rapid conduction of signal from cell to cell, which is useful because cardiac myocytes need to be able to initiate contractions as a coordinated unit.  </p>
                 <center><img src="images/cardio/gap_junctions.png" width="450" height="150"> </center></TD></TR></TABLE>
@@ -128,6 +135,7 @@
          <TABLE WIDTH="800" HEIGHT="150" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a href="cardio.html">Cardiovascular main</a> > <a href="cardiac_myocytes.html">Cardiac myocytes</a></p>
                 <a name="myocytes_contract"><h2 align=center>Atrial and Ventricular Myocytes Perform Muscle Contraction ("Excitation-Contraction Coupling")</h2></a>
                 <p> Unlike SA and AV nodal cells (which are only "conducting cells"), the atrial and ventricular myocytes are both "conducting cells" and "contractile cells". In other words, atrial and ventricular myocytes <i>both</i> a.) receive and pass on electrical signal, <i>and</i> b.) actually contract during each heartbeat.</p>
 
@@ -143,6 +151,7 @@
          <TABLE WIDTH="800" HEIGHT="150" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a href="cardio.html">Cardiovascular main</a> > <a href="cardiac_myocytes.html">Cardiac myocytes</a></p>
                 <a name="his_purkinje"><h2 align=center>His-Purkinje System</h2></a>
                 
                 <p> The purpose of the <b>His-Purkinje system</b> is to act as a <b>fast-track for electrical signal traveling to the ventricles</b>. The ventricles are so large that if we only relied on each individual ventricular myocyte to pass on its signal to its neighboring myocyte, then the top of the ventricles would start contracting before the signal even reached the bottom of the ventricles. This would result in an uncoordinated contraction, and our ventricles would not be able to contract all together and generate the contractile force needed to pump blood out to our lungs/body. So, once the electrical signal hits the AV node, it <i>both</i> a.) starts depolarizing nearby ventricular myocytes <i>and</i> b.) starts traveling down the His-Purkinje "fast track". The His-Purkinje system quickly carries the signal down toward the bottom of the ventricles, to allow the ventricular myocytes to depolarize together. </p>
@@ -159,6 +168,7 @@
                 <TABLE WIDTH="800" HEIGHT="150" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a href="cardio.html">Cardiovascular main</a> > <a href="cardiac_myocytes.html">Cardiac myocytes</a></p>
                 <a name="automaticity"><h2 align=center>Automaticity of Cardiac Cells</h2></a>
                 <p> <b>"Automaticity"</b> refers to the <b>ability of cardiac cells to spontaneously generate their own action potentials</b>. In other words, they do not have to wait for a nearby cell to send it a signal in order to depolarize--they can depolarize on their own. SA nodal cells, AV nodal cells, and cells of the His-Purkinje system can all generate their own action potentials. However, they all have different firing rates.
                 <ul><li><a href="#sa_node"><b>SA nodal cells</b></a> typically fire at a rate of 60-90 times per minute</li>
