--- a/ekg.html
+++ b/ekg.html
@@ -4,6 +4,7 @@
             <title> Electrocardiogram (EKG or ECG) </title>
         </head>
         <body bgcolor="#D9E3F0">
+            <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a align="right" href="cardio.html">Cardiovascular main map</a></p>
         	<TABLE WIDTH="800" HEIGHT="350" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="300">
@@ -25,6 +26,7 @@
         <TABLE WIDTH="800" HEIGHT="370" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a href="cardio.html">Cardiovascular main</a> > <a href="ekg.html">EKG</a></p>
                 <a name="ekgtracing"><h2 align=center>EKG Tracings</h2></a>
                 <p>The typical <a href=cardiac_myocytes.html#electrical_signal>flow of electrical signal</a> (“wave of depolarization”) through the heart creates the characteristic shape of the EKG tracing. The typical EKG tracing includes the following parts: 1.) <b>P wave</b>, 2.) <b>PR interval</b>, 3.) <b>QRS complex</b>, 4.) <b>ST interval</b>, and 5.) <b>T wave</b>. Each of these segments directly corresponds to some electrical excitation event in the heart. Each wave of depolarization starts with the automatic firing of the <a href=cardiac_myocytes.html#sa_node>SA node</a>, causes <a href=cardiac_myocytes.html#av_myocytes>atrial and ventricular myocyte depolarization</a> and <a href=cardiac_myocytes.html#myocytes_contract>myocyte contraction</a>, and repeats with every heartbeat. The ultimate result is that these electrical events cause the cyclic contraction and relaxation of the heart, which allows it to pump blood and keep <a href=cardiac_cycle.html>the cardiac cycle</a> going. </p> 
                 <p>EKG tracings typically include the following segments:</p>
@@ -33,12 +35,13 @@
                     <li><b>QRS complex</b> (blue): Represents the wave of depolarization through the ventricular myocytes ("ventricular depolarization"). Since the ventricles are much larger than the atria, this wave, or spike in the EKG, is usually larger than the P wave. The QRS complex technically also encompasses the depolarization of the His-Purkinje system; however, the His-Purkinje system covers a pretty small area and this depolarization happens really quickly, so it usually doesn't register strongly on the EKG tracing. </li>
                     <li><b>ST interval</b> (lighter blue/green): Represents the time between ventricular myocyte depolarization and repolarization. This corresponds roughly to the time where the ventricular myocytes are undergoing muscle contraction. The ST interval therefore represents <i>systole</i>.  </li>
                     <li><b>T wave</b> (green): Rpresents repolarization of ventricular myocytes, where they reset and prepare for the next wave of depolarization. </li></ol>
-                <p> Here is  a summary of EKG tracings and the corresponds electrical events in the heart:</p>
+                <p> Here is  a summary of EKG tracings and the corresponding electrical events in the heart:</p>
                 <center><img src="images/cardio/ekg_tracing.png" width="800" height="470"> </center></BR></BR></TD></TR></TABLE></body></html>
                 <BR>
         <TABLE WIDTH="800" HEIGHT="370" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a href="cardio.html">Cardiovascular main</a> > <a href="ekg.html">EKG</a></p>
                 <a name="ekgleads"><h2 align=center>EKG Leads</h2></a>
                 <p><b>EKG "leads"</b> are the electrical probes that are placed on a patient’s body that measure the <a href="cardiac_myocytes.html#electrical_signal">flow of electrical signal through their heart</a>. The average, or overall, movement of electrical signal through the heart is from the SA node in the top of the right atrium (RA) down to the botoom left corner of the left ventricle (LV). This average vector of electrical signal through the heart is depicted by the black arrow on our EKG person. The shapes of the tracings in all of the different EKG leads are slightly different because of the placement of the leads in relation to the heart's flow of electrical signal.  </p> 
                 <p>Imagine each lead as just a single probe stuck on the patient’s body in the orientation shown on EKG man (this is a simplification of the actual setup). An electrical signal heading <i>toward</i> an EKG lead creates a positive deflection in that lead (a peak on the EKG tracing going up). Electrical signal heading <i>away</i> from an EKG lead creates a negative deflection in that lead (going down). </
@@ -53,6 +56,7 @@
         <TABLE WIDTH="800" HEIGHT="370" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a href="cardio.html">Cardiovascular main</a> > <a href="ekg.html">EKG</a></p>
                 <a name="ekginfleads"><h2 align=center>EKG Inferior Leads</h2></a>
                 <p>The <b>inferior leads (Leads II, III, and aVF)</b> are on the feet. They measure electrical activity of the heart from below (from the perspective of the inferior aspect of the heart). </p>
                 <p><a href="#ekgleads">As mentioned earlier</a>, all deflections are positive in <b>Lead II</b> (“classic EKG lead”), because electrical signal is almost always flowing toward Lead II. Similarly, everything is mostly positively in <b>aVF</b>, because it’s really near Lead II. <b>Lead III</b> is a little different, just because it is both inferior and on the right side. As you can see, the average movement of electrical current in the heart is more skewed to the left; so from the perspective of lead III, the overall signal is moving at an angle, so you’ll have more equal positive and negative deflections (rather than mostly positive deflections).</p>
@@ -62,6 +66,7 @@
         <TABLE WIDTH="800" HEIGHT="370" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a href="cardio.html">Cardiovascular main</a> > <a href="ekg.html">EKG</a></p>
                 <a name="ekglatleads"><h2 align=center>EKG Lateral Leads</h2></a>
                 <p>The <b>lateral leads (Leads aVL, I, V5, and V6)</b> are located on the left arm (aVL and I) and the left side of the chest (V5 and V6). They measure electrical activity of the left lateral side of the heart, which mainly includes the left ventricle (LV).</p> 
                 <p>Lateral leads all look really similar, and they all have tall and upright R waves. This is because they primarily measure the depolarization wave across main mass of ventricles, which skews a lot toward the LV because it is much larger than the RV.</p>
@@ -71,22 +76,28 @@
         <TABLE WIDTH="800" HEIGHT="370" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a href="cardio.html">Cardiovascular main</a> > <a href="ekg.html">EKG</a></p>
                 <a name="ekgantleads"><h2 align=center>EKG Anterior Leads</h2></a>
                 <p>The <b>anterior leads (Leads V1-V4)</b>, also sometimes called <b>anteroseptal leads</b>, are located on the chest, directly over the front (or anterior) part of the heart. They measure electrical activity of the anterior heart, which includes the right ventricle and the ventricular septum. </p>
                 <p>For these leads, you have to imagine the electrical signal that is coming out of the screen towards the leads on the front of the chest. <b>V1</b> looks a lot like aVR (with mostly negative deflections), because it’s close to the right atrium, and <b>V4</b> looks like V5, due to its close proximity to the left ventricle. <b>V2</b> and <b>V3</b> are more isoelectric (more equal positive and negative deflections) because the average wave of depolarization is running more perpendicular to them (and less directly at them directly, like V4 or V5). </p>
-
                 <center><img src = "images/cardio/ekg_man_ant.png" width="400" height="325"></center></TD></TR></TABLE>
+
+
                 <BR>
 <TABLE WIDTH="800" HEIGHT="370" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a href="cardio.html">Cardiovascular main</a> > <a href="ekg.html">EKG</a></p>
                 <a name="ekgpostleads"><h2 align=center>EKG Posterior Leads</h2></a>
                 <p>The <b>posterior leads</b> are ***.</p>
                 </TD></TR></TABLE>
+
+
                 <BR>
 <TABLE WIDTH="800" HEIGHT="370" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a href="cardio.html">Cardiovascular main</a> > <a href="ekg.html">EKG</a></p>
                 <a name="ekgclinuse"><h2 align=center>EKG Clinical Uses</h2></a>
                 <p>EKGs are typically performed on patients as part of the work-up for chest pain (angina). The two most commonly tested applications of EKGs are 1.) <b>arrhythmias</b> and 2.) the <b>localization of myocardial infarctions</b> (heart attacks). </p>
                 <p>In <b>arrhythmias</b>, there is some defect in the electrical conduction system of the heart, and we can see characteristic changes associated with those on EKG. </p>
