--- a/neurons.html
+++ b/neurons.html
@@ -4,6 +4,7 @@
             <title> Neurons </title>
         </head>
         <body bgcolor="#D9E3F0">
+            <a href="index.html">PhysiologyMaps Home</a>
         	<TABLE WIDTH="800" HEIGHT="370" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
@@ -30,13 +31,15 @@
                 <center><img src="images/neuro/neurons.png" width="620" height="350"> </center>
         </TD></TR></TABLE>
        <BR>
+
         <TABLE WIDTH="800" HEIGHT="150" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <a href="neurons.html">Neurons main map</a>
                 <a name="actionpotentials"><h2 align=center>Neuronal Action Potentials</h2></a>
                 <p>Neurons transmit signals by receiving and passing on (propagating) <b>action potentials</b>. Neuronal action potentials are rapid movements of ions across cell membranes that can be "passed along" down the length of an axon, resulting in transmission of electrical signal. In neurons, action potentials are triggered when dendrites receive some signal from a nearby neuron. Action potentials must travel down the entire length of a neuron’s axon, in order to pass on signal to the next neuron (or to the organ it innervates).</p>
                 <p> Action potentials are created and propagated by the local movements of ions across cell membranes. </p>
-                <center><img src="images/neuro/action_potential.png" width="750" height="585"> </center>
+                <center><img src="images/neuro/action_potential.png" width="780" height="595"> </center>
                 <p><b>Note:</b> While this is the characteristic action potential for a neuron, the action potentials for <a href="cardiac_myocytes.html#nodal_cells">cardiac nodal cells</a>, for <a href="cardiac_myocytes.html#av_myocytes">cardiac atrial and ventricular myocytes</a>, and for skeletal muscle cells have slightly different features. 
                 </BR></TD></TR></TABLE>
                 <br>
@@ -44,25 +47,32 @@
             <TABLE WIDTH="800" HEIGHT="150" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <a href="neurons.html">Neurons main map</a>
                 <a name="synapses"><h2 align=center>Synapses</h2></a>
                 <p>Whenever a neuron passes on its signal to another cell, it does so at a <b>synapse</b> (a space or communication point between the nerve cell and another cell). The cell before the synapse (that is releasing signal from its axon terminal into the synapse) is the <b>presynaptic cell</b>. The cell after the synapse (that has receptors that will receive the signal from the first cell) is the <b>postsynaptic cell</b>. A neuron can synapse on another neuron, or a neuron can synapse on an effector organ.</p>
 
-                <p>There are two main types of <b>synapses</b>: 1.) <b>electrical synapses</b> (where ions, or electrical current, are passed from one cell to the next), or 2.) <b>chemical synapses</b> (where neurotransmitters cross from one cell to the next).</p>
+                <p>There are two main types of <b>synapses</b> between a neuron and another neuron/cell:</p>
+                <ol><li><b>Electrical synapses</b>, where <i>ions</i> (electrical current) are passed from one cell to the next, or</li>
+                    <li><b>Chemical synapses</b>, where <i>neurotransmitters</i> cross from one cell to the next, which activate receptors on the postsynaptic cell. There are two main types of <b>postsynaptic receptors</b> that can be activated by neurotransmitters after crossing a chemical synapse:
+                        <ul><li><b>Ionotropic receptors</b>, which directly open ion channels in the postsynaptic cell, or</li>
+                            <li><b>Metabotropic receptors</b>, which trigger another signaling cascade (ie, a second messenger system) in the postsynaptic cell</li></ol></p>
 
-                <p>There are two main types of <b>postsynaptic receptors</b> (receptors on postsynaptic cells that are activated by neurotransmitters after crossing the synapse): 1.) <b>ionotropic receptors</b> (which directly open ion channels), or 2.) <b>metabotropic receptors</b> (which trigger another signaling cascade, or second messenger system).</p>
-
-                <p>There are two main types of <b>effects</b> that can be triggered when the postsynaptic receptors are activated: 1.) <b>excitatory responses</b>, or 2.) <b>inhibitory responses</b>. Whether a response in excitatory or inhibitory depends on the ion channels that are affected, the neurotransmitter that is released, and/or the postsynaptic receptor that is activated.</p>
+                <p>There are two main types of <b>effects</b> that can be triggered when the postsynaptic receptors are activated:</p>
+                <ol><li><b>Excitatory responses</b>, or</li>
+                    <li><b>Inhibitory responses</b>.</li></ol>
+                    <p>Whether a response in excitatory or inhibitory depends on the ion channels that are affected, the neurotransmitter that is released, and/or the postsynaptic receptor that is activated.</p>
                 <p>In summary: </p>
-                <center><img src="images/neuro/synapse_intro.png" width="450" height="400"> </center>
+                <center><img src="images/neuro/synapse_intro.png" width="720" height="320"> </center>
                 </BR></TD></TR></TABLE>
                 <br>
 
             <TABLE WIDTH="800" HEIGHT="150" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <a href="neurons.html">Neurons main map</a>
                 <a name="e_synapses"><h2 align=center>Electrical Synapses</h2></a>
                 <p>At <b>electrical synapses</b>, the signal that is passed from one cell to the next is composed of <b>ions (electrical current)</b>. When the action potential of the presynaptic neuron reaches the axon terminal, ions diffuse directly across a <b>gap junction</b> into the postsynaptic cell. This flow of ions into the postsynaptic cell triggers an action potential in that cell.</p>
-                <center><img src="images/neuro/e_synapse.png" width="525" height="450"> </center>
+                <center><img src="images/neuro/e_synapse.png" width="590" height="500"> </center>
                 <p>Electrical synapses are typically seen:</p>
                 <ol><li>between <b>two neurons</b> (as depicted above), or</li>
                     <li>between <a href="cardiac_myocytes.html#myocytes_propagate_ap"><b>cardiac myocytes</b></a>, via gap junctions</li></ol>
@@ -72,20 +82,24 @@
             <TABLE WIDTH="800" HEIGHT="150" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <a href="neurons.html">Neurons main map</a>
                 <a name="c_synapses"><h2 align=center>Chemical Synapses</h2></a>
                 <p>At <b>chemical synapses</b>, the signal that is passed from one cell to the next is composed of <b>neurotransmitters</b>, which are compounds that activate receptors in order to achieve their effects. When the action potential reaches the axon terminal of the presynaptic neuron, neurotransmitters are released from the axon terminal, diffuse into the synaptic cleft, and bind to receptors on the postsynaptic cell. This act of neurotransmitter binding to its receptor on the other side of the synapse triggers a response in the postsynaptic cell.</p> 
 
-                <p>Neurotransmitters can trigger different physiologic responses in the postsynaptic cell by triggering either a.) <a href="#c_synapse_ion"><b>ionotropic receptors</b></a> (which directly open ion channels) or b.) <a href="#c_synapse_metab"><b>metabotropic receptors</b></a> (which trigger another signaling cascade, or second messenger system). </p>
-                <center><img src="images/neuro/c_synapse.png" width="710" height="240"> </center></TD></TR></TABLE><br>
+                <p>Neurotransmitters can trigger different physiologic responses in the postsynaptic cell by activating either:</p>
+                <ol><li><a href="#c_synapse_ion"><b>ionotropic receptors</b></a>, which directly open ion channels, or</li>
+                <li><a href="#c_synapse_metab"><b>metabotropic receptors</b></a>, which trigger another signaling cascade, or second messenger system. </li></ol></p>
+                <center><img src="images/neuro/c_synapse.png" width="770" height="240"> </center></TD></TR></TABLE><br>
 
                 <TABLE WIDTH="800" HEIGHT="150" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <a href="neurons.html">Neurons main map</a>
                 <a name="c_synapse_ion"><h2 align=center>Ionotropic Receptors (at Chemical Synapses)</h2></a>
                 <p><b>Ionotropic receptors</b>, when activated by a neurotransmitter, <b>directly open ion channels</b> on the membrane of the postsynaptic cell. These are most commonly found a.) <b>between two neurons</b>, or b.) <b>between a neuron and skeletal muscle</b> (at the neuromuscular junction). Ionotropic receptors can open ion channels in the postsynaptic cell to create either an <a href="#c_ion_excit">excitatory response</a> or <a href="#c_ion_inhib">inhibitory response</a>.</p>
-                <center><img src="images/neuro/c_synapse_ion.png" width="600" height="370"> </center>
+                <center><img src="images/neuro/c_synapse_ion.png" width="680" height="420"> </center>
                 <a name="c_ion_excit"><h3 align=center>Excitatory Responses of Ionotropic Receptors</h3></a>
-                <p> Ionotropic receptors create an <b>excitatory response</b> when they <b>open Na+ channels</b> on the postsynaptic membrane (depicted in both examples above). In both of the depicted cases, the binding of neurotransmitter at the postsynaptic cell opens Na+/K+ channels, Na+ rushes into the postsynaptic cell, and it causes a depolarization (an excitatory response, because it helped the cell get closer to its depolarization threshold). In <b>neurons</b>, this begins a new action potential. In <b>skeletal muscle</b>, this depolarization begins a contraction. </p>
+                <p> Ionotropic receptors create an <b>excitatory response</b> when they <b>open Na+ channels</b> on the postsynaptic membrane (depicted in both examples above). In both of the depicted cases, the binding of neurotransmitter at the postsynaptic cell opens Na+/K+ channels, Na+ rushes into the postsynaptic cell, and it causes a depolarization (an excitatory response, because it helped the cell get closer to its depolarization threshold). In <b>neurons</b>, this begins a new action potential. In <b>skeletal muscle</b>, this depolarization begins a muscle contraction. </p>
                 <p>Some examples of excitatory ionotropic receptors include:</p>
                 <ul><li><a href="ans.html#nicotinic"><b>Nicotinic receptors on postganglionic neurons</b> in the autonomic nervous system</a></li>
                     <li><b>Nicotinic receptors on skeletal muscle</b> at the neuromuscular junction</li>
@@ -100,14 +114,15 @@
             <TABLE WIDTH="800" HEIGHT="150" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <a href="neurons.html">Neurons main map</a>
                 <a name="c_synapse_metab"><h2 align=center>Metabotropic Receptors (at Chemical Synapses)</h2></a>
-                <p><b>Metabotropic receptors</b>, when activated by a neurotransmitter, <b>trigger another signaling cascade or second messenger system</b> in the postsynaptic cell. This second messenger system consists of a chain of reactions that ultimately lead to the desired physiologic effect. The most common examples of metabotropic receptors are <a href="gpcr.html"><b>G-protein coupled receptors (GPCRs)</b></a>, which are the main receptors found in organs regulated by the <a href="ans.html">autonomic nervous system</a>. </p>
+                <p><b>Metabotropic receptors</b>, when activated by a neurotransmitter, <b>trigger another signaling cascade or second messenger system</b> in the postsynaptic cell. This second messenger system consists of a chain of reactions that ultimately lead to the desired physiologic effect. The most common examples of metabotropic receptors are <a href="gpcr.html"><b>G-protein coupled receptors (GPCRs)</b></a>, which are some of the main receptors found in organs regulated by the <a href="ans.html">autonomic nervous system</a>. </p>
                 <p>Some examples of metabotropic receptors are:</p>
                 <ul><li><a href="ans.html#parasympathetic"><b>Muscarinic receptors</b></a> (M1, M2, M3), which are activated by acetylcholine in the autonomic nervous system</li>
                     <li><b><a href="ans.html#sympathetic">Adrenergic receptors</b></a> (alpha-1, alpha-2, beta-1, and beta-2), which are activated by norepinephrine in the autonomic nervous system</li></ul>
-                <center><img src="images/neuro/c_synapse_metab.png" width="565" height="400"> </center>
+                <center><img src="images/neuro/c_synapse_metab.png" width="605" height="420"> </center>
                 <a name="c_metab_excit"><h3 align=center>Excitatory Responses of Metabotropic Receptors</h3></a>
-                <p> Metabotropic receptors create an <b>excitatory response</b> if they trigger a stimulatory G-protein coupled receptor that activates an enzyme or increases a downstrem product. Some examples of metabotropic receptors that trigger a stimulatory signaling cascade are:</p>
+                <p> Metabotropic receptors create an <b>excitatory response</b> if they trigger a stimulatory G-protein coupled receptor that activates an enzyme or increases a downstream product. Some examples of metabotropic receptors that trigger a stimulatory signaling cascade are:</p>
                 <ul><li>M1 muscarinic receptors (activate the Gq pathway to increase IP3/DAG)</li>
                     <li>M3 muscarinic receptors (activate the Gq pathway to increase IP3/DAG)</li>
                     <li>alpha-1 adrenergic receptors (activate the Gq pathway to increase IP3/DAG)</li>
@@ -123,9 +138,10 @@
             <TABLE WIDTH="800" HEIGHT="150" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <a href="neurons.html">Neurons main map</a>
                 <a name="neuron_eff_organs"><h2 align=center>Effector Organs</h2></a>
                 <p>Signal carried by neurons can trigger activity at <b>effector organs</b>, or organs throughout the body in which some neuronal signal has some effect. The three broad categories of effector organs, which encompass much of the functional tissue in our body, include </p>
-                <p>1.) <b>Skeletal muscle</b>: Neurons in the somatic nervous system synapse onto skeletal muscle at the neuromuscular junction; neurons release acetylcholine, which activate nicotinic receptors to create contractions to move our voluntary muscles,</p>
+                <p>1.) <b>Skeletal muscle</b>: Neurons in the somatic nervous system synapse onto skeletal muscle at the neuromuscular junction; neurons release acetylcholine, which activate nicotinic receptors on skeletal muscle to create contractions to move our voluntary muscles,</p>
                 <p>2.) <b>Smooth muscle</b>: Neurons in the <a href="ans.html">autonomic nervous system</a> synapse on various types of smooth muscle throughout our body, carrying parasympathetic signals to "rest and digest" (via activation of muscarinic receptors) and sympathetic signals to initiate "fight or flight" (via activation of adrenergic receptors), and</p>
                 <p>3.) <b>Cardiac muscle</b>: The <a href="ans_reg_heart.html">heart is under tight autonomic regulation</a>, so it also receives signals from autonomic nervous system neurons to initiate "rest" (parasympathetic effects, downregulating heart activity via muscarinic receptors) and "fight or flight" (sympathetic effects, upregulating heart activity via adrenergic receptors).</p> 
                 </BR></TD></TR></TABLE>
