--- a/cardiac_cycle.html
+++ b/cardiac_cycle.html
@@ -4,7 +4,7 @@
             <title> The Cardiac Cycle </title>
         </head>
         <body bgcolor="#D9E3F0">
-
+            <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a align="right" href="cardio.html">Cardiovascular main map</a></p>
 
             <TABLE WIDTH="800" HEIGHT="370" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
@@ -44,6 +44,7 @@
         <TABLE WIDTH="800" HEIGHT="150" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a href="cardio.html">Cardiovascular main</a> > <a href="cardiac_cycle.html">The Cardiac Cycle</a></p>
                 <a name="chambers"><h2 align=center>Heart Chambers</h2></a>
                 <p>There are four <b>chambers in the heart</b> that fill with blood and function to move that blood a.) to the pulmonary vasculature (lungs) to be oxygenated, and b.) out to the systemic vasculature (rest of body):</p>
                 <ol><li><b>Right atrium</b>: Receives deoxygenated blood; the veins of the body empty into the inferior vena cava and superior vena cava, which both empty into the RA. The RA has some of the lowest pressures in the heart, because it needs to create a favorable pressure gradient, in order for blood from the body's venous system to readily flow into the RA. </li>
@@ -62,6 +63,7 @@
         <TABLE WIDTH="800" HEIGHT="150" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a href="cardio.html">Cardiovascular main</a> > <a href="cardiac_cycle.html">The Cardiac Cycle</a></p>
                 <a name="valves"><h2 align=center>Heart Valves</h2></a>
                 <p>There are four <b>heart valves</b> that control the <a href="#blood_flow">flow of blood</a> through the heart, preventing the backward flow of blood. The opening and closing of the heart valves relies on the relative pressures in the <a href="#chambers">heart chambers</a>. The closing of heart valves create the typical <a href="#sounds">heart sounds</a> ("lub-dub") that we hear on auscultation of the heart. There are four important heart valves:</p>
                 <ol><li><b>Tricuspid valve</b>: Between the right atrium (RA) and right ventricle (RV). Opens during diastole, when blood is flowing out of the RA and filling the RV. Closes when the RV is done filling and is starting to contract to  push blood into pulmonary vasculature. Tricuspid valve closure prevents the backward flow of blood into the RA while the RV contracts. Thus, <b>tricuspid valve closure is part of the sound you hear in S1, and it signals the start of systole</b>. </li></br>
@@ -80,6 +82,7 @@
         <TABLE WIDTH="800" HEIGHT="150" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a href="cardio.html">Cardiovascular main</a> > <a href="cardiac_cycle.html">The Cardiac Cycle</a></p>
                 <a name="sounds"><h2 align=center>Normal Heart Sounds (S1 and S2)</h2></a>
                 <p>The classic <b>heart sounds</b> that we hear on physical exam are created by the closing of heart valves at various points during one round of a heartbeat. The heart sounds are classically described as a "lub-dub" sound, where the first heart sound ("lub") is <b>S1</b> and the second heart sound ("dub") is <b>S2</b>.</p>
                 <ol><li><b>S1</b> (first heart sound): Sound made when the <b>tricuspid valve and bicuspid (mitral) valve close</b>. S1 signifies the end of diastole and the beginning of systole.</li>
@@ -92,6 +95,7 @@
 <TABLE WIDTH="800" HEIGHT="150" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a href="cardio.html">Cardiovascular main</a> > <a href="cardiac_cycle.html">The Cardiac Cycle</a></p>
                 <a name="extra_sounds"><h2 align=center>Extra Heart Sounds (S3, S4, and splitting)</h2></a>
                 <p>Sometimes, we can hear <b>extra heart sounds</b> on auscultation. Sometimes these can occur in normal hearts, but they sometimes indicate disesae.</p>
 
@@ -124,13 +128,14 @@
         <TABLE WIDTH="800" HEIGHT="150" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a href="cardio.html">Cardiovascular main</a> > <a href="cardiac_cycle.html">The Cardiac Cycle</a></p>
                 <a name="murmurs"><h2 align=center>Heart Murmurs</h2></a>
-                <p><b>xxx</b> xxx.</p>
+                <p>***.</p>
                 <p>Here is some common vocabulary used when describing murmurs:</p>
-                <ul><li>Stenosis: xxx. </li>
-                    <li>Regurgitation: xxx. </li>
-                    <li>Systolic murmur: xxx.</li>
-                    <li>Diastolic murmur: xxx.</li>
+                <ul><li>Stenosis: ***. </li>
+                    <li>Regurgitation: ***. </li>
+                    <li>Systolic murmur: ***.</li>
+                    <li>Diastolic murmur: ***.</li>
             </TD></TR></TABLE>
 
         <br>
@@ -138,10 +143,11 @@
         <TABLE WIDTH="800" HEIGHT="150" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
+                    <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a href="cardio.html">Cardiovascular main</a> > <a href="cardiac_cycle.html">The Cardiac Cycle</a></p>
                 <a name="dbp"><h2 align=center>The Cardiac Cycle Summary: Putting it all together</h2></a>
-                <p><b>Pressure-volume loops</b> xxx.</p>
+                <p><b>Pressure-volume loops</b> ***.</p>
 
-                <p><b>Wiggers diagram</b> xxx.</p>
+                <p><b>Wiggers diagram</b> ***.</p>
             </TD></TR></TABLE>
 
         <br>
