--- a/gpcr.html
+++ b/gpcr.html
@@ -4,6 +4,7 @@
             <title> G Protein-Coupled Receptors (GPCRs) </title>
         </head>
         <body bgcolor="#D9E3F0">
+            <a href="index.html">PhysiologyMaps Home</a>
         	<TABLE WIDTH="800" HEIGHT="370" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
