--- a/mem_potentials.html
+++ b/mem_potentials.html
@@ -4,7 +4,7 @@
             <title> Membrane Potential </title>
         </head>
         <body bgcolor="#D9E3F0">
-        
+        <a href="index.html">PhysiologyMaps Home</a>
         <TABLE WIDTH="800" HEIGHT="370" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
