--- a/preload_afterload.html
+++ b/preload_afterload.html
@@ -4,7 +4,7 @@
             <title> Preload and Afterload </title>
         </head>
         <body bgcolor="#D9E3F0">
-        	
+        	<p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a align="right" href="cardio.html">Cardiovascular main map</a></p>
         <TABLE WIDTH="800" HEIGHT="370" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
