--- a/index.html
+++ b/index.html
@@ -21,10 +21,15 @@
 <BR>
 <BR>
 <BR>
-<P ALIGN=CENTER><B><FONT SIZE=+2>About Physiology Maps</FONT></B></P>
+<TABLE WIDTH="800" HEIGHT="200" BORDER="1" CELLSPACING="2" CELLPADDING="2">
+                <TR>
+                <TD WIDTH="804" HEIGHT="200">
+                <P ALIGN=CENTER><B><FONT SIZE=+2>About Physiology Maps</FONT></B></P>
 <P>Physiology Maps is a tool to explore concepts in physiology. It was created to serve as a resource for connecting physiology concepts taught and applied throughout the pre-clinical curricula of medical school, though it may also be helpful to students in their clinical years or in other health professional schools. It is not intended to be a complete or exhaustive physiology text. It is meant to provide a framework for how different physiologic processes and systems connect to each other and a foundation on which to build a deeper understanding of pathologic processes and diseases. </P>
-
+            </TD>
+        </table>
+<br>
+<br>
 <p>Contact: physiologymaps@gmail.com</p>
-
         </body>
         </html>
